# piFromCoprimes

./: .dockerignore  .gitignore  .replit  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.dev  Makefile  PI.txt  README.md  docker-compose.debug.yml  main  main.cpp  pfc.cpp  sonar-project.properties
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: build.yml  cd-workflow.yml
Docker/: .dockerignore  Dockerfile  install-clang.sh
cmake/: FindSSE.cmake
gpu/: pfc_gpu.cpp
